fix(calendar): style and get all tasks. change the colors for dark mode

--- a/src/pages/CalendarPage/CalendarPage.scss
+++ b/src/pages/CalendarPage/CalendarPage.scss
@@ -118,9 +118,8 @@
         font-weight: var(--font-weight-bold);
     }
 
-    .rbc-event__content {
-        margin-top: 0.4rem;
-        font-size: 1.2rem;
+    .rbc-event-content {
+        font-size: var(--font-size-menu);
     }
 
     .rbc-today {
@@ -179,11 +178,14 @@
         border: 1px solid var(--color-purple-30);
         border-radius: 0.8rem;
         overflow: hidden;
+		border: none;
     }
 
     .rbc-agenda-table {
         border-spacing: 0;
         border-collapse: collapse;
+        font-size: var(--font-size-menu);
+
 
         th,
         td {
@@ -198,7 +200,6 @@
     }
 
     .rbc-agenda-time-cell {
-        font-size: var(--font-size-menu);
         color: var(--color-main-text);
     }
 
