--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -52,10 +52,10 @@ html.dark {
     --color-cta-lighter: rgba(110, 110, 184, 0.1);
 
     --color-palette-gray: #2c2c3a;
-    --color-palette-red: rgba(203, 64, 66, 0.8);
-    --color-palette-yellow: rgba(246, 174, 45, 0.8);
-    --color-palette-green: rgba(82, 183, 136, 0.8);
-    --color-palette-blue: rgba(69, 123, 157, 0.8);
+    --color-palette-red: rgba(203, 64, 66, 0.7);
+    --color-palette-yellow: rgba(246, 174, 45, 0.7);
+    --color-palette-green: rgba(82, 183, 136, 0.7);
+    --color-palette-blue: rgba(69, 123, 157, 0.7);
     --color-palette-red-strong: rgb(203, 64, 66);
 
     --color-card-background: #1d1d32;
